# alert

./: Cargo.toml  README.md  rustfmt.toml
src/: cmd_run.rs  cmd_watch.rs  command.rs  config.rs  errors.rs  main.rs  util.rs
src/notify/: console.rs  desktop.rs  mod.rs  notifyapp.rs  pushover.rs
tests/: tests.rs
