[package]
name = "alert"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Run commands and report their results to your phone or desktop"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/alert"
#documentation = "https://docs.rs/alert/"
#homepage = ""

[features]
default = ["desktop"]
# Build desktop notifications.
desktop = ["notify-rust"]

[dev-dependencies]
cli_test_dir = "0.1.1"

[dependencies]
clap = "2.24.1"
colored = "1.5.1"
env_logger = "0.7.1"
log = "0.4.8"
notify-rust = { version = "3.3.1", optional = true }
regex = "1.3.7"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
shell-escape = "0.1.3"
structopt = { version = "0.3.14", features = ["wrap_help"] }
thiserror = "1.0.16"
toml = "0.5.6"
url = "2.1.1"
